Fixed lagging on safari on main page

--- a/css/main.scss
+++ b/css/main.scss
@@ -215,7 +215,7 @@ header {
 		    }
 
 			.profile-pic {
-				background: url(../images/pic2.jpg) center center no-repeat;
+				background: url(../images/pic.jpg) center center no-repeat;
 				background-size: 101% 101%;
 				width: 60%;
 				padding-bottom: 60%;
@@ -815,6 +815,7 @@ footer {
 			float: left;
 			min-height: 200px;
 			z-index: 10;
+			position: relative;
 		}
 	}
 	
